more work on static state, updating expression semantics (this commit does not build)